--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@heroicons/react": "v1",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-tweet-embed": "^2.0.0",
+    "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
